--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "scripts": {
     "reinstall": "rm -rf node_modules/ && yarn install",
+    "typings-checker":
+      "typings-checker --allow-expect-error --project typings-checker/tsconfig.json typings-checker/index.ts",
     "clean": "rm -rf lib/ coverage/ ",
     "lint": "tslint -p './tsconfig.json' & tslint -p './tsconfig.spec.json'",
     "lint:fix": "tslint -p ./tsconfig.json --fix & tslint -p './tsconfig.spec.json' --fix",
@@ -25,12 +27,15 @@
   },
   "dependencies": {
     "fp-ts": "^1.2.0",
+    "immutable": "^3.8.2",
     "io-ts": "^1.0.5",
+    "io-ts-codegen": "^0.1.4",
     "io-ts-types": "^0.3.4",
     "lodash": "^4.17.5",
     "monocle-ts": "^1.0.0",
     "newtype-ts": "^0.2.0",
-    "sequency": "^0.18.0"
+    "sequency": "^0.18.0",
+    "typelevel-ts": "^0.2.3"
   },
   "devDependencies": {
     "@types/jest": "^22.1.3",
@@ -42,7 +47,8 @@
     "ts-node": "^5.0.0",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "typings-checker": "^2.0.0"
   },
   "keywords": [
     "mocoolka",
