--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mocoolka-fp",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files": ["lib"],
   "author": "fastspeeed@gmail.com",
   "engines": {
     "node": ">= 4"
@@ -52,6 +53,10 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(./src/*|\\.(test|spec))\\.(ts|tsx)$"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gcanti/fp-ts.git"
   },
   "keywords": [
     "mocoolka",
