--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mocoolka-fp",
-  "version": "0.1.9",
+  "version": "0.1.11",
   "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "types": [
+    "lib/index.d.ts"
+  ],
   "files": [
-    "lib"
+    "lib",
+    "node_modules/@types/lodash"
   ],
   "author": "fastspeeed@gmail.com",
   "engines": {
@@ -25,6 +28,7 @@
     "coverage": "rimraf coverage && jest --config jest.config.json --coverage"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.110",
     "fp-ts": "^1.6.2",
     "io-ts": "^1.1.5",
     "io-ts-codegen": "^0.1.7",
@@ -35,7 +39,6 @@
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
-    "@types/lodash": "^4.14.109",
     "jest": "^22.4.4",
     "jest-cli": "^22.4.4",
     "rimraf": "^2.6.2",
