--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocoolka-fp",
-  "version": "0.1.16",
+  "version": "0.1.15",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -9,7 +9,6 @@
   "author": "fastspeeed@gmail.com",
   "scripts": {
     "reinstall": "rm -rf node_modules/ && yarn install",
-    "typings-checker": "typings-checker --allow-expect-error --project typings-checker/tsconfig.json typings-checker/index.ts",
     "clean": "rm -rf lib/ coverage/ ",
     "lint": "tslint -p './tsconfig.json'",
     "lint:fix": "tslint -p ./tsconfig.json --fix",
@@ -19,25 +18,27 @@
     "precommit": "npm run lint",
     "prepush": "npm run test",
     "prepublishOnly": "npm run clean && npm run reinstall && npm run lint && npm run build && npm run test",
-    "coverage": "rimraf coverage && jest --config jest.config.json --coverage"
+    "coverage": "rimraf coverage && jest --config jest.config.json --coverage",
+    "dtslint": "dtslint dtslint"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.110",
-    "fp-ts": "^1.6.2",
-    "io-ts": "^1.1.5",
-    "io-ts-codegen": "^0.1.7",
-    "io-ts-types": "^0.3.6",
-    "lodash": "^4.17.10",
-    "monocle-ts": "^1.0.0",
-    "newtype-ts": "^0.2.0"
+    "@types/lodash": "^4.14.116",
+    "fp-ts": "^1.8.1",
+    "io-ts": "^1.3.0",
+    "io-ts-codegen": "^0.2.0",
+    "io-ts-types": "^0.3.13",
+    "lodash": "^4.17.11",
+    "monocle-ts": "^1.2.0",
+    "newtype-ts": "^0.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "jest": "^22.4.4",
+    "@types/jest": "^23.3.2",
+    "dtslint": "^0.3.0",
+    "jest": "^23.6.0",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.6",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2"
+    "ts-jest": "^23.10.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.3"
   },
   "jest": {
     "moduleFileExtensions": [
