--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocoolka-fp",
-  "version": "0.1.17",
+  "version": "0.1.18",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
+    "@types/node": "^10.11.7",
     "dtslint": "^0.3.0",
     "jest": "^23.6.0",
     "rimraf": "^2.6.2",
