--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,14 +12,15 @@
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
+    "types":["node","jest"],
     "lib": [
       "es6",
-      "es2016",
-      "es2017.object"
+      "es2017.object",
+      "dom", "es2016", "es2017"
     ]
   },
   "include": [
-    "./src/**/*"
+    "./src/**/*", "../mocoolka-react/mocoolka-components/src/reactHelper.tsx"
   ],
   "exclude": [
     "node_modules",
